--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Fingerprint Authentication</string>
-    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
+    <string name="instructions">Place your fingertip on fingerprint sensor to verify your identity</string>
 </resources>
